fix for null exceptions when emails and reps are not provided